JAVA 다형성, 인터페이스

--- a/08_Inherit_Homwork_김소영/.project
+++ b/08_Inherit_Homwork_김소영/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>08_Inherit_Homwork_김소영</name>
+	<name>08_inherit_Homwork_김소영</name>
 	<comment></comment>
 	<projects>
 	</projects>
