--- a/09_polymorphism/.project
+++ b/09_polymorphism/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>09_ObjectArray_Homework_김소영</name>
+	<name>09_polymorphism</name>
 	<comment></comment>
 	<projects>
 	</projects>
